update to read.me